--- a/style/style.css
+++ b/style/style.css
@@ -53,3 +53,12 @@ section#login {
     display: block;
     padding: 10px;
 }
+
+#form h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#form p {
+    font-size: 0.8em;
+}
