Alteração de posicionamento
Alterei a forma de posicionar o elemento em tela. Trocando de position:absolute para display:flex

--- a/style/style.css
+++ b/style/style.css
@@ -25,12 +25,15 @@ main {
     position: relative;
     height: 100vh;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 section#login {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     width: 250px;
     height: 520px;
     background-color: var(--white);
@@ -38,9 +41,9 @@ section#login {
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.362);
     
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%);
     transition: width .4s, height .4s;
-    transition-timing-function: ease;
+    transition-timing-function: ease; */
 }
 
 #image {
