--- a/style/style.css
+++ b/style/style.css
@@ -41,9 +41,9 @@ section#login {
     /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);*/
     transition: width .4s, height .4s;
-    transition-timing-function: ease; */
+    transition-timing-function: ease;
 }
 
 #image {
